# region_profiler

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.rst  README.md  README.rst  mypy.ini  notes.org  pyproject.toml  setup.cfg  setup.py
docs/: conf.py  documentation.rst  getting_started.rst  index.rst  modules.rst  region_profiler.rst
examples/: example1.py  example2.py  local_profiler.py  perf_test.py  tensorflow_mnist.py
region_profiler/: __init__.py  chrome_trace_listener.py  debug_listener.py  global_instance.py  listener.py  node.py  profiler.py  region_profiler.py  reporter_columns.py  reporters.py  utils.py
region_profiler/cython/: listener.cpp  listener.pyx  node.pxd  node.pyx  profiler.pxd  profiler.pyx  utils.pxd  utils.pyx
region_profiler/cython.deprecated/: listener.cpp  listener.pxd  node.cpp  node.pyx  profiler.cpp  utils.cpp  utils.pxd  utils.pyx
tests/: test_caller_info.py  test_chrome_trace.py  test_listeners.py  test_module.py  test_profiler_columns.py  test_recursive_function.py  test_region_naming.py  test_region_node.py  test_region_profiler.py  test_reporters.py  test_seq_stats.py  test_timer.py  test_utils.py
